--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
     <title>Inicio</title>
 </head>
-<body>
-    <nav id="navsuperior" class="navbar navbar-expand-lg bg-body-tertiary " aria-label="Thirteenth navbar example" style="background-color: black; height: 30px;">
+
+<body background="" >
+    <nav id="navsuperior" class="navbar navbar-expand-lg bg-body-tertiary fixed-top" aria-label="Thirteenth navbar example"
+        style="background-color: black; height: 30px;">
         <div class="container-fluid">
             <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarsExample11">
                 <ul class="navbar-nav">
@@ -26,71 +33,117 @@
             </div>
         </div>
     </nav>
-    
-    <nav class="navbar navbar-expand-lg bg-body-tertiary " aria-label="Thirteenth navbar example" style="background-color: #228B22;">
-        <div class="container-fluid">   
-            <a class="navbar-brand me-0" href="#">Armory</a>
-          <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarsExample11">
-            <ul class="navbar-nav col-lg-6 justify-content-lg-center">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pistolas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Rifles de Asalto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Francotiradores</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Subfusiles</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Escopetas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Ametralladoras ligeras</a>
-              </li>
-            </ul>
-        </div>
-      </nav>
 
-      <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <nav id="navinferior" class="navbar navbar-expand-lg bg-body-tertiary fixed-top" aria-label="Thirteenth navbar example"
+        style="background-color: #228B22; top: 30px;">
+        <div class="container-fluid">
+            <a class="navbar-brand me-0" href="#">Armory</a>
+            <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarsExample11">
+                <ul class="navbar-nav col-lg-6 justify-content-lg-center a">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pistolas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Rifles de Asalto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Francotiradores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Subfusiles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Escopetas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Ametralladoras ligeras</a>
+                    </li>
+                </ul>
+            </div>
+    </nav>
+
+        <div id="carouselExampleCaptions" class="carousel slide" >
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/ak2.jpg" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ak3.png" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/akxd.png" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/ak2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+
+    <hr class="featurette-divider">
+
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <!-- Columna del texto -->
+            <div class="col-md-6">
+                <h2>Texto a la izquierda</h2>
+                <p>Este es un texto de ejemplo. Puedes reemplazarlo con tu propio contenido.</p>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/ak3.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+            <!-- Columna de la imagen -->
+            <div class="col-md-6">
+                <img src="img/ak2.jpg" alt="Imagen" class="img-fluid">
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/akxd.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <!-- Columna de la imagen -->
+                <div class="col-md-6">
+                    <img src="img/ak3.png" alt="Imagen" class="img-fluid">
+                </div>
+                <!-- Columna del texto -->
+                <div class="col-md-6" style="">
+                    <h2>Texto a la derecha</h2>
+                    <p>Este es un texto de ejemplo. Puedes reemplazarlo con tu propio contenido.</p>
+                </div>
+            </div>
+        </div>
+    
+    <hr class="featurette-divider">
+
+    <footer class="container">
+        <p class="float-end"><a href="#">Back to top</a></p>
+        <p>© 2017–2024 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+      </footer> 
 </body>
+
 </html>
