Fin de index inicio pistolas

--- a/index.html
+++ b/index.html
@@ -14,136 +14,150 @@
     <title>Inicio</title>
 </head>
 
-<body background="" >
-    <nav id="navsuperior" class="navbar navbar-expand-lg bg-body-tertiary fixed-top" aria-label="Thirteenth navbar example"
-        style="background-color: black; height: 30px;">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarsExample11">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <span class="nav-link" style="color: white;">/</span>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
-                    </li>
-                </ul>
-            </div>
+<body>
+    <nav id="navsuperior" class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+        <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarsExample11">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link login-link" href="#">login</a>
+                </li>
+                <li class="nav-item">
+                    <span class="nav-link" style="color: white;">/</span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">register</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
-    <nav id="navinferior" class="navbar navbar-expand-lg bg-body-tertiary fixed-top" aria-label="Thirteenth navbar example"
-        style="background-color: #228B22; top: 30px;">
+    <nav id="navinferior" class="navbar navbar-expand-lg bg-body-tertiary fixed-top"
+        aria-label="Thirteenth navbar example" style="background-color: #228B22; top: 30px;">
         <div class="container-fluid">
             <a class="navbar-brand me-0" href="#">Armory</a>
             <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarsExample11">
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center a">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pistolas</a>
+                        <a class="nav-link nav-item-custom" href="#">Pistolas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Rifles de Asalto</a>
+                        <a class="nav-link nav-item-custom" href="#">Rifles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Francotiradores</a>
+                        <a class="nav-link nav-item-custom" href="#">Francotiradores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Subfusiles</a>
+                        <a class="nav-link nav-item-custom" href="#">Subfusiles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Escopetas</a>
+                        <a class="nav-link nav-item-custom" href="#">Escopetas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Ametralladoras ligeras</a>
+                        <a class="nav-link nav-item-custom" href="#">Ametralladoras</a>
                     </li>
                 </ul>
             </div>
+        </div>
     </nav>
 
-        <div id="carouselExampleCaptions" class="carousel slide" >
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/ak2.jpg" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="img/ak3.png" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="img/akxd.png" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+    <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
         </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <a href="">
+                    <img src="img/ak1.jpg" class="d-block w-100 img-fluid" alt="...">
+                </a>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>AK-47</h5>
+                    <p>¡Consigue la legendaria AK-47 y domina el campo de batalla con su potencia de fuego y precisión!
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <a href="">
+                    <img src="img/awp.jpg" class="d-block w-100 img-fluid" alt="...">
+                </a>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>AWP</h5>
+                    <p>¡Experimenta la emoción de la caza mayor con el AWP, el francotirador de precisión que garantiza
+                        el tiro certero a larga distancia!</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <a href="">
+                    <img src="img/desert.jpg" class="d-block w-100 img-fluid" alt="...">
+                </a>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Desert Eagle</h5>
+                    <p>¡Haz una declaración audaz con la icónica Desert Eagle, la pistola que combina estilo y poder en
+                        un solo paquete!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+
+</div>
+    <hr class="featurette-divider">
+
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <!-- Descripción de la empresa -->
+            <div class="descr col-md-6">
+                <h2>Sobre Armory</h2>
+                <p>Armory es una empresa líder en la venta de armas de fuego de alta calidad. Nos enorgullecemos de
+                    ofrecer una amplia gama de productos, incluyendo pistolas, rifles, francotiradores, escopetas y
+                    mucho más. Nuestro compromiso con la calidad y la satisfacción del cliente nos distingue en la
+                    industria. Ya sea que seas un entusiasta de las armas o un profesional en busca de equipo confiable,
+                    en Armory encontrarás todo lo que necesitas.</p>
+            </div>
+        <!-- Columna de la imagen -->
+        <div class="col-md-6">
+            <img src="img/ak2.jpg" alt="Imagen" class="img-fluid">
+        </div>
+    </div>
+    </div>
 
     <hr class="featurette-divider">
 
     <div class="container">
         <div class="row align-items-center justify-content-center">
-            <!-- Columna del texto -->
-            <div class="col-md-6">
-                <h2>Texto a la izquierda</h2>
-                <p>Este es un texto de ejemplo. Puedes reemplazarlo con tu propio contenido.</p>
-            </div>
             <!-- Columna de la imagen -->
             <div class="col-md-6">
-                <img src="img/ak2.jpg" alt="Imagen" class="img-fluid">
+                <img src="img/ak3.png" alt="Imagen" class="img-fluid">
+            </div>
+            <!-- Columna del texto -->
+            <div class="descr col-md-6">
+                <h2>Contacto</h2>
+                <p>¿Tienes alguna pregunta o comentario? ¡No dudes en ponerte en contacto con nosotros! Nuestro equipo
+                    de atención al cliente está aquí para ayudarte con cualquier consulta que puedas tener. Completa el
+                    formulario a continuación y nos pondremos en contacto contigo lo antes posible.</p>
+                <!-- Agrega aquí tu formulario de contacto si lo tienes -->
             </div>
         </div>
+    </div>
     </div>
 
     <hr class="featurette-divider">
 
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <!-- Columna de la imagen -->
-                <div class="col-md-6">
-                    <img src="img/ak3.png" alt="Imagen" class="img-fluid">
-                </div>
-                <!-- Columna del texto -->
-                <div class="col-md-6" style="">
-                    <h2>Texto a la derecha</h2>
-                    <p>Este es un texto de ejemplo. Puedes reemplazarlo con tu propio contenido.</p>
-                </div>
-            </div>
-        </div>
-    
-    <hr class="featurette-divider">
-
-    <footer class="container">
-        <p class="float-end"><a href="#">Back to top</a></p>
-        <p>© 2017–2024 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-      </footer> 
+    <footer class="footer container">
+        <p class="float-end"><a href="#">Volver arriba</a></p>
+        <p class="inc">© 2024 Armory, Inc. · <a href="#">Privacidad</a> · <a href="#">Términos</a></p>
+    </footer>
 </body>
 
 </html>
