--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav id="navbar" class="navbar navbar-expand-lg fixed-top align-items-center">
             <div class="navbar-brand">
-                <a class=" me-0" href="#">
+                <a class=" me-0" href="index.html">
                     <img src="img/brand.png" alt="Icono Armory" class="d-inline-block ">
                 </a>
             </div>
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pistolas</a>
+                        <a class="nav-link" href="pistolas.html">Pistolas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Rifles</a>
@@ -56,89 +56,95 @@
         </nav>
     </header>
     <main>
+        <div id="carousel" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <a href="#">
+                        <img src="img/ak1.jpg" class="d-block img-fluid" alt="...">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>AK-47</h5>
+                        <p>¡Consigue la legendaria AK-47 y domina el campo de batalla con su potencia de fuego y
+                            precisión!
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <a href="#">
+                        <img src="img/awp.jpg" class="d-block img-fluid" alt="...">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>AWP</h5>
+                        <p>¡Experimenta la emoción de la caza mayor con el AWP, el francotirador de precisión que
+                            garantiza
+                            el tiro certero a larga distancia!</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <a href="#">
+                        <img src="img/desert.jpg" class="d-block img-fluid" alt="...">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Desert Eagle</h5>
+                        <p>¡Haz una declaración audaz con la icónica Desert Eagle, la pistola que combina estilo y poder
+                            en
+                            un solo paquete!</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
 
+
+        <hr class="featurette-divider">
+
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="descr col-md-6">
+                    <h2>Sobre Armory</h2>
+                    <p>Armory es una empresa líder en la venta de armas de fuego de alta calidad. Nos enorgullecemos de
+                        ofrecer una amplia gama de productos, incluyendo pistolas, rifles, francotiradores, escopetas y
+                        mucho más. Nuestro compromiso con la calidad y la satisfacción del cliente nos distingue en la
+                        industria. Ya sea que seas un entusiasta de las armas o un profesional en busca de equipo
+                        confiable,
+                        en Armory encontrarás todo lo que necesitas.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/ak2.jpg" alt="Imagen" class="img-fluid">
+                </div>
+            </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-6">
+                    <img src="img/ak3.png" alt="Imagen" class="img-fluid">
+                </div>
+                <div class="descr col-md-6">
+                    <h2>Contacto</h2>
+                    <p>¿Tienes alguna pregunta o comentario? ¡No dudes en ponerte en contacto con nosotros! Nuestro
+                        equipo
+                        de atención al cliente está aquí para ayudarte con cualquier consulta que puedas tener. Completa
+                        el
+                        formulario a continuación y nos pondremos en contacto contigo lo antes posible.</p>
+                    <!-- Agrega aquí tu formulario de contacto si lo tienes -->
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <hr class="featurette-divider">
     </main>
-    <div id="carousel" class="carousel slide">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <a href="#">
-                    <img src="img/ak1.jpg" class="d-block img-fluid" alt="...">
-                </a>
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>AK-47</h5>
-                    <p>¡Consigue la legendaria AK-47 y domina el campo de batalla con su potencia de fuego y precisión!
-                    </p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <a href="#">
-                    <img src="img/awp.jpg" class="d-block img-fluid" alt="...">
-                </a>
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>AWP</h5>
-                    <p>¡Experimenta la emoción de la caza mayor con el AWP, el francotirador de precisión que garantiza
-                        el tiro certero a larga distancia!</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <a href="#">
-                    <img src="img/desert.jpg" class="d-block img-fluid" alt="...">
-                </a>
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Desert Eagle</h5>
-                    <p>¡Haz una declaración audaz con la icónica Desert Eagle, la pistola que combina estilo y poder en
-                        un solo paquete!</p>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
 
-
-    <hr class="featurette-divider">
-
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="descr col-md-6">
-                <h2>Sobre Armory</h2>
-                <p>Armory es una empresa líder en la venta de armas de fuego de alta calidad. Nos enorgullecemos de
-                    ofrecer una amplia gama de productos, incluyendo pistolas, rifles, francotiradores, escopetas y
-                    mucho más. Nuestro compromiso con la calidad y la satisfacción del cliente nos distingue en la
-                    industria. Ya sea que seas un entusiasta de las armas o un profesional en busca de equipo confiable,
-                    en Armory encontrarás todo lo que necesitas.</p>
-            </div>
-            <div class="col-md-6">
-                <img src="img/ak2.jpg" alt="Imagen" class="img-fluid">
-            </div>
-        </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="col-md-6">
-                <img src="img/ak3.png" alt="Imagen" class="img-fluid">
-            </div>
-            <div class="descr col-md-6">
-                <h2>Contacto</h2>
-                <p>¿Tienes alguna pregunta o comentario? ¡No dudes en ponerte en contacto con nosotros! Nuestro equipo
-                    de atención al cliente está aquí para ayudarte con cualquier consulta que puedas tener. Completa el
-                    formulario a continuación y nos pondremos en contacto contigo lo antes posible.</p>
-                <!-- Agrega aquí tu formulario de contacto si lo tienes -->
-            </div>
-        </div>
-    </div>
-    </div>
-
-    <hr class="featurette-divider">
 
     <footer class="footer container">
         <p class="float-end"><a href="#">Volver arriba</a></p>
