--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </ul>
             </div>
             <div class="navbar-login">
-                <a class="nav-login-link" href="#">Login</a>
+                <a class="nav-login-link" href="login.html">Login</a>
                 <span class="nav-login-link">/</span>
                 <a class="nav-login-link" href="#">Register</a>
             </div>
