--- a/pistolas.html
+++ b/pistolas.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./styles-pistolas.css">
+    <link rel="stylesheet" href="./styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -58,9 +58,9 @@
     </header>
     <main>
         <div class="container-fluid">
-            <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+            <div class="row row-cols-1 row-cols-md-4 mb-4 text-center">
                 <div class="col">
-                    <div class="card card-pistol mb-4 rounded-3 shadow-sm">
+                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
                         <div class="card-header py-3">
                             <h4 class="my-0 fw-normal">TEC-9</h4>
                         </div>
@@ -68,13 +68,13 @@
                         </div>
                         <div class="card-body">
                             <h2 class="card-title pricing-card-title">$500<small class="text-body-secondary fw-light">/USD</small></h2>
-                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver más</button>
+                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver</button>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class="card card-pistol mb-4 rounded-3 shadow-sm">
+                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
                         <div class="card-header py-3 bg-navbar">
                             <h4 class="my-0 fw-normal">TEC-9</h4>
                         </div>
@@ -82,12 +82,39 @@
                         </div>
                         <div class="card-body">
                             <h2 class="card-title pricing-card-title">$500<small class="text-body-secondary fw-light">/USD</small></h2>
-                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver más</button>
+                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver</button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card card-pistol mb-4 rounded-3 shadow-sm">
+                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h4 class="my-0 fw-normal">TEC-9</h4>
+                        </div>
+                        <div class="product-image" style="background-image: url('img/tec-9.png');">
+                        </div>
+                        <div class="card-body">
+                            <h2 class="card-title pricing-card-title">$500<small class="text-body-secondary fw-light">/USD</small></h2>
+                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h4 class="my-0 fw-normal">TEC-9</h4>
+                        </div>
+                        <div class="product-image" style="background-image: url('img/tec-9.png');">
+                        </div>
+                        <div class="card-body">
+                            <h2 class="card-title pricing-card-title">$500<small class="text-body-secondary fw-light">/USD</small></h2>
+                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
                         <div class="card-header py-3 bg-navbar">
                             <h4 class="my-0 fw-normal">TEC-9</h4>
                         </div>
@@ -95,13 +122,71 @@
                         </div>
                         <div class="card-body">
                             <h2 class="card-title pricing-card-title">$500<small class="text-body-secondary fw-light">/USD</small></h2>
-                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver más</button>
+                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver</button>
                         </div>
                     </div>
                 </div>
-            </div>
+                <div class="col">
+                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h4 class="my-0 fw-normal">TEC-9</h4>
+                        </div>
+                        <div class="product-image" style="background-image: url('img/tec-9.png');">
+                        </div>
+                        <div class="card-body">
+                            <h2 class="card-title pricing-card-title">$500<small class="text-body-secondary fw-light">/USD</small></h2>
+                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h4 class="my-0 fw-normal">TEC-9</h4>
+                        </div>
+                        <div class="product-image" style="background-image: url('img/tec-9.png');">
+                        </div>
+                        <div class="card-body">
+                            <h2 class="card-title pricing-card-title">$500<small class="text-body-secondary fw-light">/USD</small></h2>
+                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
+                        <div class="card-header py-3 bg-navbar">
+                            <h4 class="my-0 fw-normal">TEC-9</h4>
+                        </div>
+                        <div class="product-image" style="background-image: url('img/tec-9.png');">
+                        </div>
+                        <div class="card-body">
+                            <h2 class="card-title pricing-card-title">$500<small class="text-body-secondary fw-light">/USD</small></h2>
+                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h4 class="my-0 fw-normal">TEC-9</h4>
+                        </div>
+                        <div class="product-image" style="background-image: url('img/tec-9.png');">
+                        </div>
+                        <div class="card-body">
+                            <h2 class="card-title pricing-card-title">$500<small class="text-body-secondary fw-light">/USD</small></h2>
+                            <button type="button" class="w-100 btn btn-lg btn-primary">Ver</button>
+                        </div>
+                    </div>
+                </div>
+        </div>
         </div>
     </main>
+
+    <footer class="footer container">
+        <p class="float-end"><a href="#">Volver arriba</a></p>
+        <p class="inc">© 2024 Armory, Inc. · <a href="#">Privacidad</a> · <a href="#">Términos</a></p>
+    </footer>
 </body>
 
 </html>
