--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 </ul>
             </div>
             <div class="navbar-login">
-                <a class="nav-login-link" href="login.html">Login</a>
+                <a class="nav-login-link" href="login.html">Logearse</a>
                 <span class="nav-login-link">/</span>
-                <a class="nav-login-link" href="#">Register</a>
+                <a class="nav-login-link" href="login.html">Registrarse</a>
             </div>
         </nav>
     </header>
