--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./styles-login.css">
 </head>
 <body>
-
+  <a href="index.html" class="back-btn">Volver al inicio</a>
 <div class="main">  	
   <input type="checkbox" id="chk" aria-hidden="true">
 
