--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Inicio</title>
 </head>
 
 <body>
-    <header>
+    <header class="navbar-container navbar-container-expand-lg fixed-top align-items-center">
         <nav id="navbar" class="navbar navbar-expand-lg fixed-top align-items-center">
             <div class="navbar-brand">
-                <a class=" me-0" href="index.html">
-                    <img src="img/brand.png" alt="Icono Armory" class="d-inline-block ">
+                <a class="me-0" href="index.html">
+                    <img src="img/brand.png" alt="Icono Armory" class="d-inline-block">
                 </a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -47,6 +47,14 @@
                         <a class="nav-link" href="#">Ametralladoras</a>
                     </li>
                 </ul>
+            </div>
+            <div class="extrabuttons">
+                <a href="carrito.html">
+                    <i class="fa-solid fa-shopping-cart" style="color: #573b8a;"></i>
+                </a>
+                <a href="">
+                    <i class="fa-solid fa-screwdriver-wrench"style="color: #573b8a;"></i>
+                </a>
             </div>
             <div class="navbar-login">
                 <a class="nav-login-link" href="login.html">Logearse</a>
