--- a/product.html
+++ b/product.html
@@ -7,19 +7,16 @@
     <link rel="stylesheet" href="stylesproduct.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
-    <title>Document</title>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <title>Producto</title>
 </head>
 
 <body>
-    <header class="navbar-container navbar-container-expand-lg fixed-top align-items-center" >
+    <header class="navbar-container navbar-container-expand-lg fixed-top align-items-center">
         <nav id="navbar" class="navbar navbar-expand-lg fixed-top align-items-center">
             <div class="navbar-brand">
-                <a class=" me-0" href="index.html">
-                    <img src="img/brand.png" alt="Icono Armory" class="d-inline-block ">
+                <a class="me-0" href="index.html">
+                    <img src="img/brand.png" alt="Icono Armory" class="d-inline-block">
                 </a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -48,6 +45,14 @@
                     </li>
                 </ul>
             </div>
+            <div class="extrabuttons">
+                <a href="carrito.html">
+                    <i class="fa-solid fa-shopping-cart" style="color: #573b8a;"></i>
+                </a>
+                <a href="">
+                    <i class="fa-solid fa-screwdriver-wrench"style="color: #573b8a;"></i>
+                </a>
+            </div>
             <div class="navbar-login">
                 <a class="nav-login-link" href="login.html">Logearse</a>
                 <span class="nav-login-link">/</span>
@@ -70,16 +75,16 @@
             </div>
             <div class="description">
                 <h3>Sobre el arma:</h3>
-                <p>La Tec-9, una leyenda en el mundo de las armas de fuego, es una pistola semiautomática conocida por su diseño distintivo y su capacidad de fuego rápido. Fabricada para rendimiento y fiabilidad, esta arma es preferida por profesionales de la seguridad, entusiastas del tiro y coleccionistas por igual. Con su ergonomía mejorada y su facilidad de manejo, la Tec-9 ofrece precisión y potencia en cada disparo.</p>
+                <p>La Tec-9, una leyenda en el mundo de las armas de fuego, es una pistola semiautomática conocida por
+                    su diseño distintivo y su capacidad de fuego rápido. Fabricada para rendimiento y fiabilidad, esta
+                    arma es preferida por profesionales de la seguridad, entusiastas del tiro y coleccionistas por
+                    igual. Con su ergonomía mejorada y su facilidad de manejo, la Tec-9 ofrece precisión y potencia en
+                    cada disparo.</p>
             </div>
-            <button class="buy--btn">Comprar</button>
+            <button class="buy--btn" data-toggle="modal" data-target="#exampleModalCenter">Añadir al carro</button>
         </div>
     </section>
 
-    <footer>
-        <p>Design from <a href="https://dribbble.com/shots/5216438-Daily-UI-012">dribbble shot</a> of <a
-                href="https://dribbble.com/rodrigorramos">Rodrigo Ramos</a></p>
-    </footer>
 </body>
 
 </html>
