--- a/index.html
+++ b/index.html
@@ -15,54 +15,56 @@
 </head>
 
 <body>
-    <header class="navbar-container navbar-container-expand-lg fixed-top align-items-center">
-        <nav id="navbar" class="navbar navbar-expand-lg fixed-top align-items-center">
-            <div class="navbar-brand">
-                <a class="me-0" href="index.html">
-                    <img src="img/brand.png" alt="Icono Armory" class="d-inline-block">
-                </a>
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="pistolas.html">Pistolas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Rifles</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Francotiradores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Subfusiles</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Escopetas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Ametralladoras</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="extrabuttons">
-                <a href="carrito.html">
-                    <i class="fa-solid fa-shopping-cart" style="color: #573b8a;"></i>
-                </a>
-                <a href="">
-                    <i class="fa-solid fa-screwdriver-wrench"style="color: #573b8a;"></i>
-                </a>
-            </div>
-            <div class="navbar-login">
-                <a class="nav-login-link" href="login.html">Logearse</a>
-                <span class="nav-login-link">/</span>
-                <a class="nav-login-link" href="login.html">Registrarse</a>
-            </div>
-        </nav>
-    </header>
+    <div class="container">
+        <header class="navbar-container navbar-container-expand-lg fixed-top align-items-center">
+            <nav id="navbar" class="navbar navbar-expand-lg fixed-top align-items-center">
+                <div class="navbar-brand">
+                    <a class="me-0" href="index.html">
+                        <img src="img/brand.png" alt="Icono Armory" class="d-inline-block">
+                    </a>
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse align-items-center" id="navbarNav">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="pistolas.html">Pistolas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Rifles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Francotiradores</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Subfusiles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Escopetas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Ametralladoras</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="extrabuttons">
+                    <a href="carrito.html">
+                        <i class="fa-solid fa-shopping-cart" style="color: #573b8a;"></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-solid fa-screwdriver-wrench"style="color: #573b8a;"></i>
+                    </a>
+                </div>
+                <div class="navbar-login">
+                    <a class="nav-login-link" href="login.html">Logearse</a>
+                    <span class="nav-login-link">/</span>
+                    <a class="nav-login-link" href="login.html">Registrarse</a>
+                </div>
+            </nav>
+        </header>
+    </div>
     <main>
         <div id="carousel" class="carousel slide">
             <div class="carousel-inner">
