--- a/pistolas.html
+++ b/pistolas.html
@@ -90,75 +90,31 @@
                 <div class="col">
                     <div class="card card-pistol mb-6 rounded-3 shadow-sm">
                         <div class="card-header py-3 bg-navbar">
-                            <h4 class="my-0 fw-normal">TEC-9</h4>
+                            <h4 class="my-0 fw-normal">FIVE-SEVEN</h4>
                         </div>
-                        <div class="product-image" style="background-image: url('img/tec-9.png');">
+                        <div class="product-image" style="background-image: url('img/five-seven.png');">
                         </div>
                         <div class="card-body">
-                            <h2 class="card-title pricing-card-title">$500<small
+                            <h2 class="card-title pricing-card-title">$600<small
                                     class="text-body-secondary fw-light">/USD</small></h2>
-                            <a href="product.html" class="w-100 btn btn-lg btn-primary">Ver</a>
+                            <a href="product-fiveseven.html" class="w-100 btn btn-lg btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card card-pistol mb-6 rounded-3 shadow-sm">
                         <div class="card-header py-3">
-                            <h4 class="my-0 fw-normal">TEC-9</h4>
+                            <h4 class="my-0 fw-normal">P250</h4>
                         </div>
-                        <div class="product-image" style="background-image: url('img/tec-9.png');">
+                        <div class="product-image" style="background-image: url('img/P250.png');">
                         </div>
                         <div class="card-body">
-                            <h2 class="card-title pricing-card-title">$500<small
+                            <h2 class="card-title pricing-card-title">$300<small
                                     class="text-body-secondary fw-light">/USD</small></h2>
-                            <a href="product.html" class="w-100 btn btn-lg btn-primary">Ver</a>
+                            <a href="product-p250.html" class="w-100 btn btn-lg btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
-                        <div class="card-header py-3">
-                            <h4 class="my-0 fw-normal">TEC-9</h4>
-                        </div>
-                        <div class="product-image" style="background-image: url('img/tec-9.png');">
-                        </div>
-                        <div class="card-body">
-                            <h2 class="card-title pricing-card-title">$500<small
-                                    class="text-body-secondary fw-light">/USD</small></h2>
-                            <a href="product.html" class="w-100 btn btn-lg btn-primary">Ver</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
-                        <div class="card-header py-3 bg-navbar">
-                            <h4 class="my-0 fw-normal">TEC-9</h4>
-                        </div>
-                        <div class="product-image" style="background-image: url('img/tec-9.png');">
-                        </div>
-                        <div class="card-body">
-                            <h2 class="card-title pricing-card-title">$500<small
-                                    class="text-body-secondary fw-light">/USD</small></h2>
-                            <a href="product.html" class="w-100 btn btn-lg btn-primary">Ver</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card card-pistol mb-6 rounded-3 shadow-sm">
-                        <div class="card-header py-3">
-                            <h4 class="my-0 fw-normal">TEC-9</h4>
-                        </div>
-                        <div class="product-image" style="background-image: url('img/tec-9.png');">
-                        </div>
-                        <div class="card-body">
-                            <h2 class="card-title pricing-card-title">$500<small
-                                    class="text-body-secondary fw-light">/USD</small></h2>
-                            <a href="product.html" class="w-100 btn btn-lg btn-primary">Ver</a>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
         
