--- a/login.html
+++ b/login.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <title>Formulario de Registro / Inicio de Sesión</title>
   <link rel="stylesheet" href="./styles-login.css">
+  <script src="/js/validate-login.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </head>
 <body>
   <a href="index.html" class="back-btn">Volver al inicio</a>
@@ -11,25 +17,32 @@
     <input type="checkbox" id="chk" aria-hidden="true">
 
     <div class="signup">
-      <form action="index.html" method="get" onsubmit="return validateForm()"> <!-- Agrega la URL de la página de inicio aquí -->
+      <form action="index.html" method="get" onsubmit="return validateForm()"> 
         <label for="chk" aria-hidden="true">Registrarse</label>
-        <input type="text" name="txt" placeholder="Nombre de usuario" pattern="[a-zA-Z0-9]+" title="Por favor, utiliza solo letras y números." required="">
-        <input type="email" name="email" placeholder="Correo electrónico" required="">
-        <input type="password" name="pswd" placeholder="Contraseña" required="">
-        <button type="submit">Registrarse</button> <!-- Cambia el tipo de botón a "submit" -->
+        <input type="text" name="txt" placeholder="Usuario" class="validatetable" pattern="[a-zA-Z0-9]+" title="Por favor, utiliza solo letras y números." maxlength="20" required="">
+        <input type="email" name="email" id="email" placeholder="Correo electrónico" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" title="Por favor, introduce una dirección de correo electrónico válida" required="">
+
+        <input type="password" name="password" id="password" placeholder="Contraseña" pattern="[A-Za-z\d.!@#$%^&*]{8,}" title="La contraseña debe tener al menos 8 caracteres, una letra mayúscula, una letra minúscula, un número y un carácter especial" oninput="checkPasswordMatch()" required="">
+<input type="password" name="password2" id="password2" placeholder="Confirma la contraseña" title="La contraseña debe tener al menos 8 caracteres, una letra mayúscula, una letra minúscula, un número y un carácter especial" oninput="checkPasswordMatch()" required="">
+
+
+<button type="submit" onclick="$('#welcomeModal').modal('show')">Registrarse</button>
+
       </form>
     </div>
 
     <div class="login">
-      <form action="index.html"> <!-- Agrega la URL de la página de inicio aquí -->
+      <form action="index.html" method="get"> 
         <label for="chk" aria-hidden="true">Iniciar sesión</label>
-        <input type="email" name="email" placeholder="Correo electrónico" required="">
-        <input type="password" name="pswd" placeholder="Contraseña" required="">
+        <input type="email" name="email" id="email" placeholder="Correo electrónico" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" title="Por favor, introduce una dirección de correo electrónico válida" required="">
+        <input type="password" name="password" id="password" placeholder="Contraseña" pattern="[A-Za-z\d.!@#$%^&*]{8,}" title="La contraseña debe tener al menos 8 caracteres, una letra mayúscula, una letra minúscula, un número y un carácter especial" oninput="checkPasswordMatch()" required="">
         <button type="submit">Iniciar sesión</button> <!-- Cambia el tipo de botón a "submit" -->
       </form>
     </div>
   </div>
 
+
+   <!-- valida el username -->
   <script>
     function validateForm() {
       var username = document.forms[0]["txt"].value;
@@ -40,6 +53,22 @@
       return true;
     }
   </script>
+
+ <!-- valida la password -->
+
+ <script>
+  function checkPasswordMatch() {
+      var password = document.getElementById("password").value;
+      var confirmPassword = document.getElementById("password2").value;
+  
+      if (password != confirmPassword) {
+          document.getElementById("password2").setCustomValidity("Las contraseñas no coinciden");
+      } else {
+          document.getElementById("password2").setCustomValidity("");
+      }
+  }
+</script>
+
 
 </body>
 </html>
