--- a/carrito.html
+++ b/carrito.html
@@ -55,7 +55,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
                     <a href="carrito.html">
                         <i class="fa-solid fa-shopping-cart" style="color: #573b8a;"></i>
                     </a>
-                    <a href="">
+                    <a href="admin-pedidos.html">
                         <i class="fa-solid fa-screwdriver-wrench"style="color: #573b8a;"></i>
                     </a>
                 </div>
