--- a/pistolas.html
+++ b/pistolas.html
@@ -54,7 +54,7 @@
                     <a href="carrito.html">
                         <i class="fa-solid fa-shopping-cart" style="color: #573b8a;"></i>
                     </a>
-                    <a href="">
+                    <a href="admin-pedidos.html">
                         <i class="fa-solid fa-screwdriver-wrench" style="color: #573b8a;"></i>
                     </a>
                 </div>
