--- a/product-tec9.html
+++ b/product-tec9.html
@@ -53,7 +53,7 @@
                 <a href="carrito.html">
                     <i class="fa-solid fa-shopping-cart" style="color: #573b8a;"></i>
                 </a>
-                <a href="">
+                <a href="admin-pedidos.html">
                     <i class="fa-solid fa-screwdriver-wrench" style="color: #573b8a;"></i>
                 </a>
             </div>
