--- a/api.html
+++ b/api.html
@@ -10,7 +10,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
     <title>API</title>
 </head>
 <body>
-    <h1>Imagen aleatoria de un perro</h1>
+    <h1 class="texto">Imagen aleatoria de un perro</h1>
     <img id="dogImage" src="" alt="Imagen de perro">
     <button onclick="fetchRandomDogImage()">Mostrar imagen aleatoria</button>
     <script> window.onload = fetchRandomDogImage;</script>
