--- a/admin_users.html
+++ b/admin_users.html
@@ -76,7 +76,7 @@
           <div class="product-cell telefono"><span class="telefono-data">978541266</span></div>
           <div class="product-cell acciones">
             <button class="btn btn-danger me-2 adminbtn">Eliminar</button>
-            <button class="btn btn-success adminbtn" data-bs-toggle="modal" data-bs-target="#modifyUserModal">Modificar</button>
+            <button class="btn btn-success adminbtn" data-bs-toggle="modal" data-bs-target="#modifyUserModal" data-user-id="unique_user_id">Modificar</button>
           </div>
         </div>
       </div>
